# cmc-py

./: .gitignore  Dockerfile  Makefile  README.md  codecov.yml  config.yml  docker-compose.yml  docs.ps1  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: PyPI.yml  codecov.yml  docker-image.yml  docker-publish.yml  lint.yml  python-publish.yml  test.yml
api/: README.md  config.py  database.py  main.py  schemas.py
api/graphql/: schemas.py
api/graphql/routers/: cryptocurrency.py
api/rest/routers/: cryptocurrency.py  exchange.py  nft.py
api/routers/: cryptocurrency.py  exchange.py  nft.py
api/utils/: config.py  database.py  schemas.py
cmc/: README.md  __init__.py
cmc/modules/: __init__.py  base.py
cmc/modules/cryptocurrency/: __init__.py  currency.py  gainers.py  losers.py  most_visited.py  price_prediction.py  ranking.py  recently_added.py  trending.py
cmc/modules/exchange/: __init__.py  (+5 more)
cmc/resources/: __init__.py  user_agents.json  user_agents.py
cmc/utils/: __init__.py  exceptions.py  format.py  models.py
docs/: index.html
docs/cmc/: config.html  index.html
docs/modules/: base.html  index.html
docs/resources/: index.html  user_agents.html
docs/utils/: exceptions.html  format.html  index.html  models.html
tests/: README.md
tests/api/: test_database.py  test_main.py
tests/cryptocurrency/: test_currency.py  test_gainers.py  test_losers.py  test_most_visited.py  test_ranking.py  test_recently_added.py  test_trending.py
tests/exchange/: test_derivatives.py  test_exchange.py  test_lending.py  test_spot.py
tests/nft/: test_collection.py
(+48 files in other folders)
