[tool.poetry]
name = "coinmarketcap"
version = "0.1.0"
description = "Unofficial CoinMarketCap API and Python wrapper"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = {extras = ["all"], version = "^4.10.0"}
lxml = "^4.7.1"
mypy = {extras = ["all"], version = "^0.931"}
black = "^22.1.0"
types-requests = "^2.27.9"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
pytest = "^7.0.1"
pdoc3 = "^0.10.0"
fastapi = {extras = ["all"], version = "^0.73.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
